fixing dark mode nave colour

--- a/_sass/theme/pages/_page-custom.scss
+++ b/_sass/theme/pages/_page-custom.scss
@@ -7,6 +7,10 @@
     background-color: var(--color-base-bg-2);
 }
 
+.menu-main ul li > a {
+    color: var(--color-base-text);
+}
+
 .logo-text a:hover {
     text-decoration: none;
 }
